resolvido o erro da avaliaçao